--- a/Lab2/kelsey_lab02.Rmd
+++ b/Lab2/kelsey_lab02.Rmd
@@ -52,6 +52,8 @@ Non-spatial datasets
 library(tidyverse)
 library(sf)
 library(tmap)
+library(stringr)
+
 ```
 
 
@@ -246,22 +248,24 @@ bmps %>% dplyr::filter(!is.na(Cost)) %>% group_by(StateAbbreviation) %>%
             min = min(Cost))
 ```
 
-```{r Need to ask Dr. Bitterman}
+```{r}
 #1.2 Make a scatterplot of Cost vs. TotalAmountCredited, ONLY FOR Units of type "Acres". You may need to apply a data transformation to one or more axes if the data are heavily skewed.
 bmps
 
 bmp.acres <- bmps %>% dplyr::filter(., Unit == "Acres")
 bmp.acres
 
+#Do both axes need a log?
+hist(bmp.acres$Cost)
+hist(bmp.acres$TotalAmountCredited)
+#Both Cost and Total Amount Credited are heavily skewed to the left. There isn't a nice bell curve. Therefore, I believe both axes need transformed. 
+
 bmp.acres %>% ggplot(., aes(x = Cost, y = TotalAmountCredited)) +
   geom_point() +
-  #scale_x_log10() + scale_y_log10() +
+  scale_x_log10() + scale_y_log10() +
   labs(y = "Total Amount Credited")
 
-#Do both axes need a log?
-
 ```
-
 
 ```{r}
 #1.3 Make a boxplot with "StateAbbreviation" on the x-axis and "TotalAmountCredited" on the y-axis. HOWEVER, the only data I want plotted are for cover crop BMPs. Note, there are many types of cover crops in this dataset, and I want you to include them ALL. There are handy functions within the ```stringr``` package that can help you here. Use the help function ```?stringr``` or read the documentations/vignettes found online. A Google search for "r stringr vignettes documentation" would be a good place to start if you're having trouble.
@@ -279,7 +283,6 @@ bmps %>%
 
 ```
 
-
 ```{r}
 #1.4 make a scatterplot of the `dam` dataset, this time with "YEAR" on the x-axis and "STATE" on y-axis (think of it like a timeline). Assume no dams were built in year 0, so you'll need to remove those data points. You know how to remove observations based on a given criteria.
 dams
@@ -293,19 +296,26 @@ dams.filt %>% ggplot(., aes(x = YEAR, y = STATE)) +
 
 ```
 
-
-```{r Need to think this through}
+```{r}
 #1.5 make one last (aspatial) visualization. But this time, it's your choice what data and plots to use. The only requirement is that you link two of the datasets together in some manner. Be creative. Make it look nice (e.g., use proper labels, interesting colors/shading/size).
 bmps
-counties
+counties 
 #Want to link these two together.
+bmps$GeoNameCond <- str_sub(bmps$GeographyName, 1,2)
+bmps
 
-bmps %>% 
+bmpfilt.1 <- bmps %>%  as_tibble() %>% group_by(GeoNameCond, BMP) %>% summarise(totalcost = sum(Cost, na.rm=TRUE), .groups = "drop")
+
+cobmp <- left_join(counties, bmpfilt.1, by = c("STATEFP10"= "GeoNameCond"))
+cobmp
+
+cobmp %>% 
   mutate(
   wetland = str_count(BMP, "Wetlands"),
-  ) %>% dplyr::filter(wetland == 1) 
-#%>% ggplot(., aes(x = StateAbbreviation, y= Cost)) +
-  #geom_boxplot(aes(fill = StateAbbreviation))
+  ) %>% dplyr::filter(wetland == 1) %>% ggplot(., aes(x = STATEFP10, y= totalcost, fill = STATEFP10)) +
+  geom_bar(stat = "identity") +   
+ scale_fill_brewer(palette = "Set1") +
+  labs(x="State", y="Cost", title="Total Cost of wetland BMPS per State")
 
 ```
 
@@ -336,24 +346,38 @@ str(st.co)
 st.co %>% as_tibble() %>% dplyr::select(-geometry) %>% group_by(COUNTYFP10) %>% summarise(totallength = sum(LengthKM)) %>% dplyr::arrange(desc(totallength)) %>% slice(1:3)
 ```
 
-```{r Need input on how to do this}
+```{r}
 #2.3 Make a map of the counties, shading each county by the total cost of BMPs funded/implemented in that county. This will required you to join multiple datasets together
 bmps
 counties
+
 tm_shape(counties) + tm_polygons(fill = "STATEFP10")
 
-  
+bmps$GeoNameCond <- str_sub(bmps$GeographyName, 3,5)
+bmps
+
+bmpfilt <- bmps %>%  as_tibble() %>% group_by(GeoNameCond) %>% summarise(totalcost = sum(Cost, na.rm=TRUE), .groups = "drop")
+
+bmpco_joined <- left_join(counties, bmpfilt, by = c("COUNTYFP10"= "GeoNameCond"))
+bmpco_joined
+
+tm_shape(bmpco_joined) + tm_polygons(fill = "totalcost")
 ```
 
-```{r Will need help}
+```{r}
 #2.4 For each removed dam, find the closest stream segment
 dams
 streams
 #plot(dams)
 #plot(streams)
+dast <- sf::st_nearest_feature(dams, streams)  
+#x: The spatial object of class sf containing the set of features (can be points, lines, or polygons).
+#y: The spatial object of class sf containing the point(s) for which the nearest feature is to be found.
+dast
 
-sf::st_distance(streams, dams) %>% as_tibble() %>% dplyr::arrange(across(everything()))
-#34 dams                                                                  
+neardast <- streams$GNIS_Name[dast]
+neardast
+#In case the names of the streams are needed
 ```
 
 ```{r}
